# tensor-forge

./: .gitignore  Cargo.toml  LICENSE  README.md  coverage-badge.json
.cargo/: config.toml
.github/workflows/: coverage.yml  rust.yml
docs/: outline.md
examples/: addition_graph.rs  branching_graph.rs  custom_kernel.rs  feedforward_neural_net.rs
src/: executor.rs  graph.rs  kernel.rs  lib.rs  node.rs  op.rs  registry.rs  tensor.rs
tests/: graph_tests.rs  integration_tests.rs  kernel_registry_tests.rs  kernel_tests.rs  tensor_tests.rs  topo_sort_tests.rs
tests/common/: mod.rs
